more css and fixing home

--- a/public/index.html
+++ b/public/index.html
@@ -33,11 +33,12 @@
     </nav>
 
     <main>
-      <div id="">
-        <div class="container">
-          <p></p>
-        </div>
-      </div>
+      <section id="homePage">
+        <h3>Welcome to</h3>
+        <h1>UWI Central HUB</h1>
+        <h3>All Things UWI</h3>
+        <button>Join for FREE</button>
+      </section>
     </main>
 
     <script>
