--- a/public/index.html
+++ b/public/index.html
@@ -39,6 +39,23 @@
         <h3>All Things UWI</h3>
         <button>Join for FREE</button>
       </section>
+
+      <section>
+        <div class="row">
+          <div class="column">
+            <div class="card">..</div>
+          </div>
+          <div class="column">
+            <div class="card">..</div>
+          </div>
+          <div class="column">
+            <div class="card">..</div>
+          </div>
+          <div class="column">
+            <div class="card">..</div>
+          </div>
+        </div> 
+      </section>
     </main>
 
     <script>
