--- a/public/index.html
+++ b/public/index.html
@@ -34,27 +34,30 @@
 
     <main>
       <section id="homePage">
-        <h3>Welcome to</h3>
-        <h1>UWI Central HUB</h1>
-        <h3>All Things UWI</h3>
-        <button>Join for FREE</button>
+        <div id="homePageText">
+          <h3>Welcome to</h3>
+          <h1>UWI Central HUB</h1>
+          <h3>All Things UWI</h3>
+          <button>Join for FREE</button>
+        </div>
       </section>
 
       <section>
-        <div class="row">
-          <div class="column">
-            <div class="card">..</div>
+        <h1>Recommended ===></h1>
+        <div style="display: flex;">
+          <div class="container">
+            <p>A</p>
           </div>
-          <div class="column">
-            <div class="card">..</div>
-          </div>
-          <div class="column">
-            <div class="card">..</div>
-          </div>
-          <div class="column">
-            <div class="card">..</div>
-          </div>
-        </div> 
+          <div class="container">
+            <p>B</p>
+          </div> 
+          <div class="container">
+            <p>C</p>
+          </div> 
+          <div class="container">
+            <p>D</p>
+          </div> 
+        </div>
       </section>
     </main>
 
