--- a/public/homepage.html
+++ b/public/homepage.html
@@ -21,14 +21,15 @@
       background-color: #001a33;
       margin: 0; /* Reset default margin */
       padding: 0; /* Reset default padding */
+      color: white;
+      font-family: verdana;
     }
 
     header{
       background-color: black;
       display: flex;
       justify-content: space-between;
-      align-items: center;
-      padding: 10px 20px; /* Add padding for better spacing */
+      align-items: center; /* Add padding for better spacing */
     }
 
     header h2{
@@ -83,12 +84,103 @@
       bottom: 0%;
       transform: translate(-50%, -50%); /* Center text horizontally and vertically */
       z-index: 1;
+      padding: 0;
+      margin: 0;
+    }
+
+    #wlctxt p{
     }
 
     #wlctxt h2{
       font-size: 50px;
+      font-weight: bolder;
+      color: white;
+      padding:0;
+      margin: 0;
     }
-  </style>
+
+    #wlctxt button{
+      background-color: orangered;
+      color: black;
+      font-family: verdana;
+      font-size: 16px;
+      width: 200px;
+      height: 40px;
+      border-radius: 7px;
+    }
+
+    #recommended{
+      
+    }
+
+    #recommended h3{
+      position: relative;
+      margin-left: 20px;
+    }
+
+    /*.recommendedTile{
+      max-width: 250px;
+      height: 500px;
+      max-height: 300px;
+      background-color: white;
+      margin: 20px;
+      border-radius: 10px;
+      overflow: hidden;
+    }
+
+    .recommendedTile img {
+      max-width: 100%;
+      max-height: 100%;
+      width: auto;
+      height: auto;
+      position: relative;
+      object-fit: cover;
+      }*/
+
+      .recommendedTile {
+        max-width: 250px;
+        height: 500px;
+        max-height: 300px;
+        background-color: white;
+        margin: 20px;
+        border-radius: 10px;
+        position: relative;
+        overflow: hidden;
+      }
+
+      .recommendedTile img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        position: absolute;
+        top: 0;
+        left: 0;
+      }
+
+      .tilegradient{
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background: linear-gradient(to top, #001a33 0%,
+        rgba(0, 26, 51, 0.8) 10%,
+        rgba(0, 26, 51, 0.6) 20%,
+        rgba(0, 26, 51, 0.4) 50%,
+        rgba(0, 26, 51, 0.2) 100%);
+        opacity: 0.9;
+        z-index: 0;
+      }
+
+      .tiletxt{
+      position: absolute;
+      bottom: 10px;
+      z-index: 1;
+      padding: 0;
+      margin: 0;
+      }
+
+    </style>
 </head>
 
 <body>
@@ -100,13 +192,39 @@
   <div id="Welcome">
     <div id="wlcimg">
       <img src="https://sat02pap003files.storage.live.com/y4m1iUMhOr8uN88-nqXvJB-aETLuOq7k2MiAAOmpOX8cO9BxZxPctzf_tHE04ZEJnUsfo55jf3niM8hBe1ulsANcQxx1TceeAEh4n8WVp9dkWhDda7_s9M_Azmht0QDJsx3yi7gmqz8EXDpIZyVmLOi3ffjSSTS5f2MH9K1A44Iet6CLisZoVpRlgsmgJTnuyvMq6Wg7xTYinSoBWVER0n79vGh612mDnkLAoKSChpH9mw?encodeFailures=1&width=1438&height=809">
-      <div id="wlcgradient"></div> <!-- Moved gradient inside the image div -->
+      <div id="wlcgradient"></div>
     </div>
     <div id="wlctxt">
       <p>Welcome to</p>
       <h2>UWI Central HUB</h2>
       <p> All Things UWI</p>
+      <button>Join for Free</button>
+    </div>
+  </div>
+
+  <div id="recommended">
+    <h3>Recommended</h3>
+    <div class="recommendedTile">
+      <img src="https://sat02pap003files.storage.live.com/y4m1iUMhOr8uN88-nqXvJB-aETLuOq7k2MiAAOmpOX8cO9BxZxPctzf_tHE04ZEJnUsfo55jf3niM8hBe1ulsANcQxx1TceeAEh4n8WVp9dkWhDda7_s9M_Azmht0QDJsx3yi7gmqz8EXDpIZyVmLOi3ffjSSTS5f2MH9K1A44Iet6CLisZoVpRlgsmgJTnuyvMq6Wg7xTYinSoBWVER0n79vGh612mDnkLAoKSChpH9mw?encodeFailures=1&width=1438&height=809">
+      <div class="tilegradient"></div>
+
+      <div class="tiletxt">
+      <h3>UCH</h3>
+    </div>
+
+    <div class="recommendedTile">
+      <img src="https://sat02pap003files.storage.live.com/y4m1iUMhOr8uN88-nqXvJB-aETLuOq7k2MiAAOmpOX8cO9BxZxPctzf_tHE04ZEJnUsfo55jf3niM8hBe1ulsANcQxx1TceeAEh4n8WVp9dkWhDda7_s9M_Azmht0QDJsx3yi7gmqz8EXDpIZyVmLOi3ffjSSTS5f2MH9K1A44Iet6CLisZoVpRlgsmgJTnuyvMq6Wg7xTYinSoBWVER0n79vGh612mDnkLAoKSChpH9mw?encodeFailures=1&width=1438&height=809">
+      <div class="tilegradient"></div>
+
+      <div class="tiletxt">
+      <h3>UCH</h3>
+    </div>
+
     </div>
   </div>
 </body>
+
+<script>
+  
+</script>
 </html>
