--- a/public/index.html
+++ b/public/index.html
@@ -572,6 +572,8 @@
           loadEl.textContent = 'Error loading the Firebase SDK, check the console.';
         }
       });
+
     </script>
+    <script src="main.js"></script>
   </body>
 </html>
