--- a/public/homepage.html
+++ b/public/homepage.html
@@ -176,11 +176,10 @@
           top: 50%;
           left: 50%;
           transform: translate(-50%, -50%);
-          background-color: #001a33;
+          background-color: rgba(0, 26, 51, 0.9);
           padding: 20px;
-          border: 1px solid #ccc;
           border-radius: 5px;
-          box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.75);
+          box-shadow: 0px 0px 30px 5px rgba(255, 255, 255, 0.2);
           z-index: 9999;
 
 
@@ -193,8 +192,10 @@
       .close {
           position: absolute;
           top: 10px;
-          right: 10px;
+          right: 15px;
           cursor: pointer;
+          font-size: 30px;
+          color: orangered;
       }
 
       /* Style for the overlay */
