--- a/public/homepage.html
+++ b/public/homepage.html
@@ -18,7 +18,7 @@
     }
 
     body{
-      background-color: #001a33;
+      background-color: #00002B;
       margin: 0; /* Reset default margin */
       padding: 0; /* Reset default padding */
       color: white;
@@ -69,13 +69,13 @@
       left: 0;
       width: 100%;
       height: 100%;
-      background: linear-gradient(to top, #001a33 20%,
-    rgba(0, 26, 51, 0.8) 30%,
-    rgba(0, 26, 51, 0.6)50%,
-    rgba(0, 26, 51, 0.4) 70%,
-    rgba(0, 26, 51, 0.2) 100%);
-      opacity: 0.9;
-      z-index: 0;
+      background: linear-gradient(to top, 
+          rgba(0, 0, 43, 1) 0%,
+          rgba(0, 7, 47, 0.8) 20%,
+          rgba(0, 13, 50, 0.6) 50%,
+          rgba(0, 20, 51, 0.4) 80%,
+          rgba(0, 26, 51, 0.2) 100%);
+        z-index: 0;
     }
 
     #wlctxt {
@@ -248,7 +248,8 @@
 
     </div>
 
-    <div class="recommendedTile" >
+    <div class="recommendedTile" onclick="openPopup()">
+      <span class="close" onclick="closePopup()">&times;</span>
       <img src="https://sat02pap003files.storage.live.com/y4m1iUMhOr8uN88-nqXvJB-aETLuOq7k2MiAAOmpOX8cO9BxZxPctzf_tHE04ZEJnUsfo55jf3niM8hBe1ulsANcQxx1TceeAEh4n8WVp9dkWhDda7_s9M_Azmht0QDJsx3yi7gmqz8EXDpIZyVmLOi3ffjSSTS5f2MH9K1A44Iet6CLisZoVpRlgsmgJTnuyvMq6Wg7xTYinSoBWVER0n79vGh612mDnkLAoKSChpH9mw?encodeFailures=1&width=1438&height=809">
 
       <div class="tilegradient"></div>
@@ -259,7 +260,8 @@
 
     </div>
 
-    <div class="recommendedTile">
+    <div class="recommendedTile" onclick="openPopup()">
+      <span class="close" onclick="closePopup()">&times;</span>
       <img src="https://sat02pap003files.storage.live.com/y4m1iUMhOr8uN88-nqXvJB-aETLuOq7k2MiAAOmpOX8cO9BxZxPctzf_tHE04ZEJnUsfo55jf3niM8hBe1ulsANcQxx1TceeAEh4n8WVp9dkWhDda7_s9M_Azmht0QDJsx3yi7gmqz8EXDpIZyVmLOi3ffjSSTS5f2MH9K1A44Iet6CLisZoVpRlgsmgJTnuyvMq6Wg7xTYinSoBWVER0n79vGh612mDnkLAoKSChpH9mw?encodeFailures=1&width=1438&height=809">
 
       <div class="tilegradient"></div>
@@ -270,7 +272,8 @@
 
     </div>
 
-    <div class="recommendedTile">
+    <div class="recommendedTile" onclick="openPopup()">
+      <span class="close" onclick="closePopup()">&times;</span>
       <img src="https://sat02pap003files.storage.live.com/y4m1iUMhOr8uN88-nqXvJB-aETLuOq7k2MiAAOmpOX8cO9BxZxPctzf_tHE04ZEJnUsfo55jf3niM8hBe1ulsANcQxx1TceeAEh4n8WVp9dkWhDda7_s9M_Azmht0QDJsx3yi7gmqz8EXDpIZyVmLOi3ffjSSTS5f2MH9K1A44Iet6CLisZoVpRlgsmgJTnuyvMq6Wg7xTYinSoBWVER0n79vGh612mDnkLAoKSChpH9mw?encodeFailures=1&width=1438&height=809">
 
       <div class="tilegradient"></div>
@@ -281,7 +284,8 @@
 
     </div>
 
-    <div class="recommendedTile">
+    <div class="recommendedTile" onclick="openPopup()">
+      <span class="close" onclick="closePopup()">&times;</span>
       <img src="https://sat02pap003files.storage.live.com/y4m1iUMhOr8uN88-nqXvJB-aETLuOq7k2MiAAOmpOX8cO9BxZxPctzf_tHE04ZEJnUsfo55jf3niM8hBe1ulsANcQxx1TceeAEh4n8WVp9dkWhDda7_s9M_Azmht0QDJsx3yi7gmqz8EXDpIZyVmLOi3ffjSSTS5f2MH9K1A44Iet6CLisZoVpRlgsmgJTnuyvMq6Wg7xTYinSoBWVER0n79vGh612mDnkLAoKSChpH9mw?encodeFailures=1&width=1438&height=809">
 
       <div class="tilegradient"></div>
