--- a/public/homepage.html
+++ b/public/homepage.html
@@ -128,7 +128,6 @@
         max-width: 250px;
         height: 300px;
         max-height: 300px;
-        background-color: white;
         margin: 0 15px 20px 15px;
         border-radius: 15px;
         position: relative;
@@ -153,12 +152,12 @@
         left: 0;
         width: 100%;
         height: 100%;
-        background: linear-gradient(to top, #001a33 0%,
-        rgba(0, 26, 51, 0.8) 10%,
-        rgba(0, 26, 51, 0.6) 20%,
-        rgba(0, 26, 51, 0.4) 50%,
-        rgba(0, 26, 51, 0.2) 100%);
-        opacity: 0.9;
+        background: linear-gradient(to top,
+          rgba(0, 0, 43, 0.8) 0%,
+          rgba(0, 7, 47, 0.7) 12%,
+          rgba(0, 13, 50, 0.5) 25%,
+          rgba(0, 20, 51, 0.2) 37%,
+          rgba(0, 26, 51, 0.1) 50%);
         z-index: 0;
       }
 
