--- a/public/homepage.html
+++ b/public/homepage.html
@@ -214,7 +214,7 @@
 <body>
   <header> 
     <h2>UCH</h2>
-    <button> Sign Up</button>
+    <a href="SignUp.html"><button> Sign Up</button></a>
   </header>
 
   <div id="Welcome">
@@ -226,7 +226,7 @@
       <p>Welcome to</p>
       <h2>UWI Central HUB</h2>
       <p> All Things UWI</p>
-      <button>Join for Free</button>
+      <a href="SignUp.html"> <button>Join for Free</button> </a>
     </div>
   </div>
 
