--- a/public/SignUp.html
+++ b/public/SignUp.html
@@ -18,6 +18,20 @@
       height: 100%;
     }
 
+  header{
+      background-color: black;
+      display: flex;
+      width: 100%;
+      margin: 0;
+      justify-content: space-between;
+      align-items: center;
+    }
+
+    header h2{
+      margin-left: 20px;
+      text-decoration: none;
+    }
+
     #signup{
       position: relative;
       top: 30px;
@@ -80,6 +94,10 @@
 </head>
 
 <body>
+
+  header> 
+      <a href="homepage.html"><h2>UCH</h2></a>
+  </header>
 
   <div id="signup">
     <h2>Sign Up</h2>
