--- a/public/SignUp.html
+++ b/public/SignUp.html
@@ -25,6 +25,7 @@
       margin: 0;
       justify-content: space-between;
       align-items: center;
+      box-shadow: 0px 5px 50px rgba(255, 255, 255, 0.1);
     }
 
     header h2{
