--- a/public/homepage.html
+++ b/public/homepage.html
@@ -29,7 +29,8 @@
       background-color: black;
       display: flex;
       justify-content: space-between;
-      align-items: center; /* Add padding for better spacing */
+      align-items: center;
+      box-shadow: 0px 5px 50px rgba(255, 255, 255, 0.1);
     }
 
     header h2{
