--- a/public/homepage.html
+++ b/public/homepage.html
@@ -29,8 +29,8 @@
       background-color: black;
       display: flex;
       justify-content: space-between;
-      align-items: center;
-      box-shadow: 0px 5px 50px rgba(255, 255, 255, 0.1);
+      align-items: center; /* Add padding for better spacing */
+      box-shadow: 0px 5px 20px rgba(255, 255, 255, 0.1);
     }
 
     header h2{
@@ -51,17 +51,24 @@
     #Welcome {
       position: relative;
       text-align: center;
+      max-width: 100vw;
+      max-height: 100vh;
+      overflow: hidden;
     }
 
     #wlcimg {
-      position: relative; /* Change to relative to ensure gradient is positioned correctly */
-      width: 100%;
-      height: auto;
+      position: relative;
+      width: 100vw;
+      height: 100vh;
+      object-fit: cover;
+      text-align: center;
+      justify-content: center;
     }
 
     #wlcimg img{
-      width: 100%;
+      width: 100vw;
       height: 100vh;
+      object-fit: cover;
     }
 
     #wlcgradient {
@@ -83,7 +90,7 @@
       position: absolute;
       left: 50%;
       bottom: 0%;
-      transform: translate(-50%, -50%); /* Center text horizontally and vertically */
+      transform: translate(-50%, -50%);
       z-index: 1;
       padding: 0;
       margin: 0;
@@ -154,11 +161,11 @@
         width: 100%;
         height: 100%;
         background: linear-gradient(to top,
-          rgba(0, 0, 43, 0.8) 0%,
-          rgba(0, 7, 47, 0.7) 12%,
-          rgba(0, 13, 50, 0.5) 25%,
-          rgba(0, 20, 51, 0.2) 37%,
-          rgba(0, 26, 51, 0.1) 50%);
+        rgba(0, 0, 43, 0.8) 0%,
+        rgba(0, 7, 47, 0.7) 12%,
+        rgba(0, 13, 50, 0.5) 25%,
+        rgba(0, 20, 51, 0.2) 37%,
+        rgba(0, 26, 51, 0.1) 50%);
         z-index: 0;
       }
 
