--- a/public/SignUp.html
+++ b/public/SignUp.html
@@ -28,7 +28,7 @@
       box-shadow: 0px 5px 50px rgba(255, 255, 255, 0.1);
     }
 
-    header h2{
+    header a{
       margin-left: 20px;
       text-decoration: none;
     }
