--- a/public/homepage.html
+++ b/public/homepage.html
@@ -80,9 +80,9 @@
       background: linear-gradient(to top, 
           rgba(0, 0, 43, 1) 0%,
           rgba(0, 7, 47, 0.8) 20%,
-          rgba(0, 13, 50, 0.6) 50%,
-          rgba(0, 20, 51, 0.4) 80%,
-          rgba(0, 26, 51, 0.2) 100%);
+          rgba(0, 13, 50, 0.4) 50%,
+          rgba(0, 20, 51, 0.2) 80%,
+          rgba(0, 26, 51, 0.1) 100%);
         z-index: 0;
     }
 
@@ -120,6 +120,26 @@
 
     .recommended{
       height: fit-content;
+    }
+
+    .recommended #Recc h3, .recommended #Recc p {
+      display: inline-block;
+      margin: 20px; /* Optionally, reset any default margins */
+    }
+
+    #Recc {
+      display: flex;
+      flex-direction: row;
+      align-items: center;
+    }
+
+    #Recc h3, #Recc p {
+      margin: 10px;
+    }
+
+    .SeeMore{
+      font-size: 30px;
+      margin: 0;
     }
 
     .allrectiles{
@@ -227,7 +247,7 @@
 
   <div id="Welcome">
     <div id="wlcimg">
-      <img src="https://sat02pap003files.storage.live.com/y4m1iUMhOr8uN88-nqXvJB-aETLuOq7k2MiAAOmpOX8cO9BxZxPctzf_tHE04ZEJnUsfo55jf3niM8hBe1ulsANcQxx1TceeAEh4n8WVp9dkWhDda7_s9M_Azmht0QDJsx3yi7gmqz8EXDpIZyVmLOi3ffjSSTS5f2MH9K1A44Iet6CLisZoVpRlgsmgJTnuyvMq6Wg7xTYinSoBWVER0n79vGh612mDnkLAoKSChpH9mw?encodeFailures=1&width=1438&height=809">
+      <img src="https://sat02pap003files.storage.live.com/y4mygE3jgaayjsdkWZV47qbL1quOqt6-7t0CCjiCpWSJvcI5ukl4fhXSjFuW15m5wjhvyUyYKARKRcqXOxkjVPXXT_u9FBs2Iq1WjEcwK5nWhKhCr3RZyrP3F04XOac_YQs_lBWHx8qiv7LUnA52flXlQtNk5g8ciJrkOkQazBbYJ-YH47O7C6rATYPVM8HspMyqKOclfYU470LKtxnT1P8XLEx8-7pFKrgF8gXnG7T0C8?encodeFailures=1&width=1677&height=809">
       <div id="wlcgradient"></div>
     </div>
     <div id="wlctxt">
@@ -239,7 +259,12 @@
   </div>
 
   <div class="recommended">
-    <h3>Recommended</h3>
+    <div id="Recc">
+      <h3>Recommended</h3>
+      <p>See More</p>
+      <span class="SeeMore">&#8594;</span>
+
+    </div>
 
     <div class="allrectiles">
 
@@ -257,48 +282,48 @@
 
     <div class="recommendedTile" onclick="openPopup()">
       <span class="close" onclick="closePopup()">&times;</span>
-      <img src="https://sat02pap003files.storage.live.com/y4m1iUMhOr8uN88-nqXvJB-aETLuOq7k2MiAAOmpOX8cO9BxZxPctzf_tHE04ZEJnUsfo55jf3niM8hBe1ulsANcQxx1TceeAEh4n8WVp9dkWhDda7_s9M_Azmht0QDJsx3yi7gmqz8EXDpIZyVmLOi3ffjSSTS5f2MH9K1A44Iet6CLisZoVpRlgsmgJTnuyvMq6Wg7xTYinSoBWVER0n79vGh612mDnkLAoKSChpH9mw?encodeFailures=1&width=1438&height=809">
+      <img src="https://sat02pap003files.storage.live.com/y4m-TtQetjxN11vyKuSxnhEBgxvJWSGR0b2UB7HearIU2vP8yLqSUjojIjcQ94dB_-viJx4HcyKOkllw6g_O6vPRTGEY1mXQvIqehL0N1JDtlcglUqrtMN4MvqIhHYKfBIvZoSbGOFnnMVeb2qYCA9mB2hOe-mOVLuJ2OsKODk3oDvCTY7FRjfnyRZktptPl2kzZM1mdAp0MaT8zWDwzcBRpEmLCyIjRzddbKaTYH_rq5M?encodeFailures=1&width=1437&height=809">
 
       <div class="tilegradient"></div>
 
       <div class="tiletxt">
-      <h3 >UCH</h3>
+      <h3 >Campus Map</h3>
       </div>
 
     </div>
 
     <div class="recommendedTile" onclick="openPopup()">
       <span class="close" onclick="closePopup()">&times;</span>
-      <img src="https://sat02pap003files.storage.live.com/y4m1iUMhOr8uN88-nqXvJB-aETLuOq7k2MiAAOmpOX8cO9BxZxPctzf_tHE04ZEJnUsfo55jf3niM8hBe1ulsANcQxx1TceeAEh4n8WVp9dkWhDda7_s9M_Azmht0QDJsx3yi7gmqz8EXDpIZyVmLOi3ffjSSTS5f2MH9K1A44Iet6CLisZoVpRlgsmgJTnuyvMq6Wg7xTYinSoBWVER0n79vGh612mDnkLAoKSChpH9mw?encodeFailures=1&width=1438&height=809">
+      <img src="https://sat02pap003files.storage.live.com/y4m3iCYh4CTEvEmrQqffLp7wHPHXKwoJcI9YQbjsThll02VzKPuYT75T0LlY1gT9chYpbAkSzdev5WBdh0r0VZ2sPeZnSD1DaYjfzhE-y1ItwdO5yqGKc2ZYyMwYM69-XObF9q18AufMr-YmxxPQKMc13yD_fgoNJ13OzWarNoQE5N6S89i4NeeHZtHiAXeTSvXgwgyrxLmKLuCZLL1xDcoq9p3ZcyKRVgyzG1Iu39FS-A?encodeFailures=1&width=606&height=809">
 
       <div class="tilegradient"></div>
 
       <div class="tiletxt">
-      <h3>UCH</h3>
+      <h3>FST</h3>
       </div>
 
     </div>
 
     <div class="recommendedTile" onclick="openPopup()">
       <span class="close" onclick="closePopup()">&times;</span>
-      <img src="https://sat02pap003files.storage.live.com/y4m1iUMhOr8uN88-nqXvJB-aETLuOq7k2MiAAOmpOX8cO9BxZxPctzf_tHE04ZEJnUsfo55jf3niM8hBe1ulsANcQxx1TceeAEh4n8WVp9dkWhDda7_s9M_Azmht0QDJsx3yi7gmqz8EXDpIZyVmLOi3ffjSSTS5f2MH9K1A44Iet6CLisZoVpRlgsmgJTnuyvMq6Wg7xTYinSoBWVER0n79vGh612mDnkLAoKSChpH9mw?encodeFailures=1&width=1438&height=809">
+      <img src="https://sat02pap003files.storage.live.com/y4mu0RVbP-9JBVD3ha44knE0GCG5PUe1akqMF-mF4FExJvROsWcus80uTfG9QnOAshdSScWqxL0mb7oGHDuPD9H4nRGwuW6zlb3HDHabwO43ar6hcz3qrP0G_8HKzxS0krSFvuFx8AW3Uf_Jy8M3tzYAD8l39ZoicxvYUjew1qiVN4nQAhmj1nf42wD1CvMl8ix_3dyWoEA9xoNifzB-k4laAWyFeevLmKO2qXQ2SUNxwc?encodeFailures=1&width=539&height=809">
 
       <div class="tilegradient"></div>
 
       <div class="tiletxt">
-      <h3>UCH</h3>
+      <h3>Sports</h3>
       </div>
 
     </div>
 
     <div class="recommendedTile" onclick="openPopup()">
       <span class="close" onclick="closePopup()">&times;</span>
-      <img src="https://sat02pap003files.storage.live.com/y4m1iUMhOr8uN88-nqXvJB-aETLuOq7k2MiAAOmpOX8cO9BxZxPctzf_tHE04ZEJnUsfo55jf3niM8hBe1ulsANcQxx1TceeAEh4n8WVp9dkWhDda7_s9M_Azmht0QDJsx3yi7gmqz8EXDpIZyVmLOi3ffjSSTS5f2MH9K1A44Iet6CLisZoVpRlgsmgJTnuyvMq6Wg7xTYinSoBWVER0n79vGh612mDnkLAoKSChpH9mw?encodeFailures=1&width=1438&height=809">
+      <img src="https://sat02pap003files.storage.live.com/y4mNa0KPfoF0Nsy709lo9IIYPxMUZkXqW634a_q1zI47sZBDkjYyY_UrGyDIAdHCEhdk3Ob-UMZhBGnAaqLIfAPTFQmYrUy1oLmQpjVrQ23GNp4MMZ9NbxaLyFsj0kt4-J2zR-OnIkyuUB5B2EbLk3QvQ09pjHZhuIkgBG29en9NhiZc07FQh33t2QA5Qtblo3gxowqCoetxvuZdIfONb5GzMpp-m-Duz_uCHNQq6Kso2k?encodeFailures=1&width=539&height=809">
 
       <div class="tilegradient"></div>
 
       <div class="tiletxt">
-      <h3>UCH</h3>
+      <h3>CAPS</h3>
       </div>
 
     </div>
