--- a/public/index.html
+++ b/public/index.html
@@ -207,7 +207,8 @@
       <p>Welcome to</p>
       <h2>UWI Central HUB</h2>
       <p> All Things UWI</p>
-      <button>Join for Free</button>
+      <button><a href="./SignUp.html">Join for Free</a></button>
+      <!-- Anchor tag above is temporary, only for testing purposes-->
     </div>
   </div>
 
