--- a/public/SignUp.html
+++ b/public/SignUp.html
@@ -119,8 +119,9 @@
     <input type="password" id="confirm_password" name="confirm_password" required><br><br>
     
     <div class="buttondiv">
-      <input type="button" value="Next" onclick="showNextPart('second-part')" class="button">
+      <input type="button" id="Next" value="Next" onclick="showNextPart('second-part')" class="button">
     </div>
+
   </form>
   </div>
 
