--- a/public/index.html
+++ b/public/index.html
@@ -107,9 +107,6 @@
         margin: 0;
       }
   
-      #wlctxt p{
-      }
-  
       #wlctxt h2{
         font-size: 50px;
         font-weight: bolder;
@@ -195,7 +192,7 @@
   <body>
 <header> 
     <h2>UCH</h2>
-    <button> Sign Up</button>
+    <button id="SignUp"> Sign Up</button>
   </header>
 
   <div id="Welcome">
@@ -576,5 +573,6 @@
 
     </script>
     <script src="main.js"></script>
+    <script src="SignUp.js"></script>
   </body>
 </html>
