--- a/public/SignUp.html
+++ b/public/SignUp.html
@@ -184,8 +184,8 @@
   <div>
     <form id="first-part" action="#" method="post">
     <h3>Login Credentials</h3>
-    <label for="email_phone">Email/ Phone Number:</label><br>
-    <input type="text" id="email_phone" name="email_phone" required><br><br>
+    <label for="email_phone">Username:</label><br>
+    <input type="text" id="username" name="Username" required><br><br>
     
     <label for="password">Password:</label><br>
     <input type="password" id="password" name="password" required><br><br>
@@ -264,7 +264,7 @@
   }
 
   function goToHomepage() {
-    window.location.href = "homepage.html"; // Change "homepage.html" to the actual URL of your homepage
+    window.location.href = "homepage.html";
   }
 
   function goBack() {
