--- a/public/index.html
+++ b/public/index.html
@@ -204,7 +204,7 @@
       <p>Welcome to</p>
       <h2>UWI Central HUB</h2>
       <p> All Things UWI</p>
-      <button><a href="./SignUp.html">Join for Free</a></button>
+      <button id="Next"><a href="./SignUp.html">Join for Free</a></button>
       <!-- Anchor tag above is temporary, only for testing purposes-->
     </div>
   </div>
