--- a/public/SignUp.html
+++ b/public/SignUp.html
@@ -80,7 +80,7 @@
     
     form {
       text-align: left;
-      width: 500px; /* Adjust as needed */
+      width: 100%; /* Adjust as needed */
       position: relative;
       top: 20px;
       margin-bottom: 60px;
