--- a/public/SignUp.html
+++ b/public/SignUp.html
@@ -77,6 +77,10 @@
       text-align: center;
       margin-bottom:25px;
     }
+
+  #second-part{
+      padding: 10px;
+    }
     
     form {
       text-align: left;
