--- a/public/SignUp.html
+++ b/public/SignUp.html
@@ -16,7 +16,6 @@
       align-items: center;
       justify-content: center;
       height: 100%;
-      width: 100%
       margin: 0;
     }
 
@@ -42,6 +41,10 @@
     #signup{
       position: relative;
       top: 30px;
+    }
+
+  .signup-part {
+      display: none;
     }
 
     .buttondiv{
