--- a/public/homepage.html
+++ b/public/homepage.html
@@ -235,6 +235,14 @@
           left: 0;
           background-color: rgba(0,0,0,0.5);
           z-index: 9998;
+      }
+
+    @media (max-width: 600px){
+        .recommendedTile {
+          max-width: 100px;
+          height: 120px;
+          max-height: 120px;
+        }
 
     </style>
 </head>
