--- a/public/homepage.html
+++ b/public/homepage.html
@@ -238,11 +238,13 @@
       }
 
     @media (max-width: 600px){
-        .recommendedTile {
-          max-width: 100px;
-          height: 120px;
-          max-height: 120px;
-        }
+      .recommendedTile {
+        max-width: 150px;
+        height: 200px;
+        max-height: 200px;
+        margin: 0 5px 10px 5px;
+        border-radius: 5px;
+      }
 
     </style>
 </head>
