--- a/public/SignUp.html
+++ b/public/SignUp.html
@@ -288,4 +288,5 @@ function closeLoginPopup() {
   document.getElementById("overlay").style.display = "none";
 }
 </script>
+<script src="./auth.js"></script>
 </html>
