--- a/public/index.html
+++ b/public/index.html
@@ -572,7 +572,7 @@
       });
 
     </script>
-    <script src="main.js"></script>
+    <script src="main.js" type="module"></script>
     <script src="SignUp.js"></script>
   </body>
 </html>
