--- a/public/SignUp.html
+++ b/public/SignUp.html
@@ -178,7 +178,7 @@
 
 <body>
   <header> 
-      <a href="homepage.html"><h2>UCH</h2></a>
+      <a href="index.html"><h2>UCH</h2></a>
   </header>
 
   <div id="signup">
@@ -245,7 +245,7 @@
   }
 
   function goToHomepage() {
-    window.location.href = "homepage.html";
+    window.location.href = "index.html";
   }
 
   function goBack() {
