--- a/public/index.html
+++ b/public/index.html
@@ -251,6 +251,15 @@
             background-color: rgba(0,0,0,0.5);
             z-index: 9998;
         }
+
+      @keyframes glow {
+        0% {
+              text-shadow: 0 0 10px orangered;
+          }
+        100% {
+              text-shadow: 0 0 20px orangered;
+          }
+      }
   
       @media (max-width: 600px) {
           .allrectiles {
@@ -276,14 +285,19 @@
   <body>
     <header> 
       <h2>UCH</h2>
-      <a href="SignUp.html"><button> Sign Up</button></a>
+      <div id="userbuttons">
+      <span id="user"></span>
+        <button id="logoutBtn">
+            Logout
+        </button>
+        <button id="loginBtn">
+          Login
+        </button>
+    </div>
     </header>
   
     <div id="Welcome">
       <div id="wlcimg">
-        <!--
-        <img src="https://sat02pap003files.storage.live.com/y4m9nv7MrFzylFH9LmaT3_0ukkGjtC8pN-b43sJGPdI1VneiExCxIQomZ8pBLcmTwRLNsrkEVYIupYW-c3gH-tJNgrauk4S7hUb6zqgSGyLYeY7a3xlUU4Q8tIvbbhqbErT6jx-mzshguPcpO3MLJwyuH3jU5_Ud6JpoY6UGe-dEWdMap2VqZIdApUfd1jOxbIai0kDh8hLUp0jhzncX48gikOaGB4xNv7LS6XiALOsAhI?encodeFailures=1&width=1906&height=809">
-        -->
         <img src="./images/UWI_Wall.jpeg">
         <div id="wlcgradient"></div>
       </div>
@@ -291,7 +305,8 @@
         <p>Welcome to</p>
         <h2>UWI Central HUB</h2>
         <p> All Things UWI</p>
-        <a href="SignUp.html"> <button>Join for Free</button> </a>
+              <button id="getStarted">Add Profile</button>
+      <a id="addProfile" href="SignUp.html"> <button>Add Profile</button> </a>
       </div>
     </div>
   
